@@ -582,13 +582,38 @@ AC_MSG_RESULT($CSA)
 
 case "$CSA" in
   yes) AC_DEFINE([ENABLE_CSA], 1, [Define to enable Cray's CSA support])
-      MOMLIBS="$MOMLIBS -L/opt/cray/job/default/lib64 -lcsa"
-      AC_CHECK_LIB([job], [job_create], ,
-        [AC_MSG_ERROR([--enable-csa requires job library support])])
+      LDFLAGS_csasave="$LDFLAGS"
+      LDFLAGS="$LDFLAGS -L/opt/cray/job/default/lib64"
+      AC_CHECK_LIB([csa], [csa_check],
+        [MOMLIBS="$MOMLIBS -L/opt/cray/job/default/lib64 -lcsa"],
+        [AC_MSG_ERROR([--enable-csa requires libcsa])])
+      LDFLAGS=$LDFLAGS_csasave
       ;;
   no) : ;;
   *) AC_MSG_ERROR([--enable-csa should be yes or no]) ;;
 esac
+
+dnl
+dnl enable libjob job_create support
+dnl We do a full link test because some platforms require libcap and libpam and we want to make sure
+dnl they are installed
+dnl
+AC_MSG_CHECKING([whether to enable libjob job_create support])
+AC_ARG_ENABLE(job_create,
+    [  --enable-job-create     enable libjob job_create support],
+    JOBCREATE=$enableval,JOBCREATE=no)
+AC_MSG_RESULT($JOBCREATE)
+
+case "$JOBCREATE" in
+  yes) AC_DEFINE([USEJOBCREATE], 1, [Define to enable libjob job_create support])
+      AC_CHECK_LIB([job],[job_create],
+        [MOMLIBS="$MOMLIBS -ljob"],
+        [AC_MSG_ERROR([--enable-job-create requires libjob support]) ])
+      ;;
+  no) : ;;
+  *) AC_MSG_ERROR([--enable-job-create should be yes or no]) ;;
+esac
+
 
 
 
@@ -610,12 +635,6 @@ case $PBS_MACH in
       AC_CHECK_LIB(util, openpty, MOMLIBS="$MOMLIBS -lutil"),
         AC_MSG_WARN([This is an ancient distro... will open ptys directly])
         AC_DEFINE([USEOLDTTY], 1, [Define on ancient linux distros]))
-dnl
-dnl  Check for job_create function on Cray
-dnl
-    AC_CHECK_LIB([job], [job_create],
-      [MOMLIBS="-L/opt/cray/job/default/lib64 -ljob $MOMLIBS"
-        CFLAGS="$CFLAGS -DUSEJOBCREATE"])
     ;;
   darwin*) AC_DEFINE(SETCONTROLLINGTTY, 1, [Define to set the controlling tty])
     ;;
