@@ -102,10 +102,6 @@
 #define SIGIOT 6
 #endif
 
-#ifdef ENABLE_CSA
-#include <job.h>
-#endif /* ENABLE_CSA */
-
 
 /* struct startjob_rtn = used to pass error/session/other info  */
 /*    child back to parent   */
@@ -114,10 +110,6 @@ struct startjob_rtn
   {
   int   sj_code; /* error code */
   pid_t sj_session; /* session */
-
-#ifdef ENABLE_CSA
-  jid_t sj_csajobid;
-#endif /* ENABLE_CSA */
   };
 
 extern int mom_set_limits (job *, int); /* Set job's limits */
